# FactoryMethod

./: Builder.h  CMakeLists.txt  Game.h  GameHelper.h  README.md  Types.h  main.cpp
Creators/: Creator.h  ElfCreator.h  GhostCreator.h  MonsterCreator.h
Heroes/: Elf.h  Ghost.h  Hero.h  Monster.h
